crates/swc_ts_fast_strip/tests/errors/namespaces.ts
namespace Foo { export const m = 1; }

export namespace Bar { export const m = 1; }
